--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -38,7 +38,7 @@
   line-height: 16.59px;
   color: #1b1c1e;
   border-radius: 5px;
-  width: 175px;
+  padding: 0 20px;
   height: 40px;
   cursor: pointer;
 }
